--- a/src/components/video-player.scss
+++ b/src/components/video-player.scss
@@ -129,7 +129,9 @@
     z-index: 2;
     .agora-rtc-video {
       display: flex;
-      flex: 1
+      flex: 1;
+      height: 100%;
+      width: 100%;
     }
   }
 }
