--- a/src/icons.scss
+++ b/src/icons.scss
@@ -359,7 +359,7 @@
     background-repeat: no-repeat;
     content: ' ';
     background-size: 20px;
-    background-image: url('./assets/hand_tool.png');
+    background-image: url('./assets/icon-move.png');
   }
 
   .lock_board::after {
