--- a/src/icons.scss
+++ b/src/icons.scss
@@ -5,6 +5,54 @@
   align-items: center;
 }
 
+.network-bad {
+  cursor: pointer;
+  display: flex;
+  width: 16px;
+  height: 16px;
+  &::after {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: ' ';
+    background-image: url('./assets/signal-bad@2x.png');
+  }
+}
+
+.network-good {
+  cursor: pointer;
+  display: flex;
+  width: 16px;
+  height: 16px;
+  &::after {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: ' ';
+    background-image: url('./assets/signal-good@2x.png');
+  }
+}
+
+.network-normal {
+  cursor: pointer;
+  display: flex;
+  width: 16px;
+  height: 16px;
+  &::after {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: ' ';
+    background-image: url('./assets/signal-normal@2x.png');
+  }
+}
+
 .icon {
   cursor: pointer;
   display: flex;
