--- a/src/icons.scss
+++ b/src/icons.scss
@@ -101,6 +101,12 @@
   background-image: url('./assets/icon-speaker@2x.png');
 }
 
+.icon-speaker-on,
+.icon-speaker-off
+{
+  width: 37px;
+}
+
 .icon-speaker-on::after {
   width: 100%;
   height: 100%;
@@ -108,7 +114,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   content: ' ';
-  background-image: url('./assets/icon-speaker03-s.png');
+  background-image: url('./assets/icon-speaker-on.png');
 }
 
 .icon-speaker-off::after {
@@ -118,7 +124,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   content: ' ';
-  background-image: url('./assets/icon-speakeroff-s@2x.png');
+  background-image: url('./assets/icon-speaker-off.png');
 }
 
 .icons-camera-mute::after {
@@ -707,7 +713,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     content: ' ';
-    background-image: url('./assets/icon-speaker03@2x.png');
+    background-image: url('./assets/icon-microphone-on-blue@2x.png');
   }
 
   &:hover {
@@ -718,7 +724,7 @@
       background-repeat: no-repeat;
       background-size: contain;
       content: ' ';
-      background-image: url('./assets/icon-speaker03@2x.png');
+      background-image: url('./assets/icon-microphone-on-blue@2x.png');
     }
   }
 }
@@ -731,7 +737,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     content: ' ';
-    background-image: url('./assets/icon-speakeroff-dark@2x.png');
+    background-image: url('./assets/icon-microphone-off-blue@2x.png');
   }
 
   &:hover {
@@ -742,8 +748,7 @@
       background-repeat: no-repeat;
       background-size: contain;
       content: ' ';
-      background-image: url('./assets/icon-speakeroff-dark@2x.png');
-      // background-image: url('./assets/icon-speaker03-disable@2x.png');
+      background-image: url('./assets/icon-microphone-off-blue@2x.png');
     }
   }
 }
@@ -756,7 +761,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     content: ' ';
-    background-image: url('./assets/icon-camera-on@2x.png');
+    background-image: url('./assets/icon-camera-on-blue@2x.png');
   }
 
   &:hover {
@@ -767,7 +772,7 @@
       background-repeat: no-repeat;
       background-size: contain;
       content: ' ';
-      background-image: url('./assets/icon-camera-on@2x.png');
+      background-image: url('./assets/icon-camera-on-blue@2x.png');
     }
   }
 }
@@ -780,7 +785,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     content: ' ';
-    background-image: url('./assets/icon-camera-off@2x.png');
+    background-image: url('./assets/icon-camera-off-blue@2x.png');
   }
 
   &:hover {
@@ -791,7 +796,7 @@
       background-repeat: no-repeat;
       background-size: contain;
       content: ' ';
-      background-image: url('./assets/icon-camera-off@2x.png');
+      background-image: url('./assets/icon-camera-off-blue@2x.png');
     }
   }
 }
