--- a/src/components/video-player.scss
+++ b/src/components/video-player.scss
@@ -16,6 +16,24 @@
   }
 }
 
+.clickable {
+  cursor: pointer;
+  position: absolute;
+  z-index: 3;
+  height: 100%;
+  width: 100%;
+  &::after {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 5vw;
+    content: ' ';
+    background-image: url('../assets/icon-clickable.png');
+  }
+}
+
 .video-profile {
   z-index: 3;
   width: 100%;
