--- a/src/pages/error-page/index.scss
+++ b/src/pages/error-page/index.scss
@@ -11,12 +11,12 @@
   max-width: 880px;
 }
 
-.title {
-  font-size: 13.7em;
-  color: white;
-  letter-spacing: 14px;
-  font-weight: 700;
-}
+// .title {
+//   font-size: 13.7em;
+//   color: white;
+//   letter-spacing: 14px;
+//   font-weight: 700;
+// }
 
 .description {
   font-size: 1.125rem;
