--- a/src/icons.scss
+++ b/src/icons.scss
@@ -301,8 +301,8 @@
 }
 
 .media-board.panel {
-  pointer-events: none;
-  cursor: pointer;
+  // pointer-events: none;
+  // cursor: pointer;
 }
 
 .media-board {
