--- a/src/components/whiteboard.scss
+++ b/src/components/whiteboard.scss
@@ -172,6 +172,7 @@
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1);
     border-radius: 6px;
     border: 1px solid rgba(219,226,229,1);
+    z-index: 1;
     .zoom-icon {
       cursor: pointer;
       width: 34px;
