--- a/education_iOS/AgoraEducation/Room/View/EEChatTextFiled.xib
+++ b/education_iOS/AgoraEducation/Room/View/EEChatTextFiled.xib
@@ -21,10 +21,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfP-gG-jrA">
-                    <rect key="frame" x="0.0" y="49.5" width="398" height="34"/>
+                    <rect key="frame" x="10" y="49.5" width="378" height="34"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Input message" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AX9-E7-bb3">
-                            <rect key="frame" x="10" y="0.0" width="378" height="34"/>
+                            <rect key="frame" x="10" y="0.0" width="358" height="34"/>
                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" returnKeyType="send"/>
@@ -49,8 +49,8 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="qfP-gG-jrA" firstAttribute="trailing" secondItem="g1c-Ij-sJb" secondAttribute="trailing" id="35X-qx-B8A"/>
-                <constraint firstItem="qfP-gG-jrA" firstAttribute="leading" secondItem="g1c-Ij-sJb" secondAttribute="leading" id="D2G-Lj-kyK"/>
+                <constraint firstItem="qfP-gG-jrA" firstAttribute="trailing" secondItem="g1c-Ij-sJb" secondAttribute="trailing" constant="-10" id="35X-qx-B8A"/>
+                <constraint firstItem="qfP-gG-jrA" firstAttribute="leading" secondItem="g1c-Ij-sJb" secondAttribute="leading" constant="10" id="D2G-Lj-kyK"/>
                 <constraint firstItem="obL-XT-gM1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="P76-Ny-9pm"/>
                 <constraint firstItem="qfP-gG-jrA" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="nf8-2I-DNe"/>
                 <constraint firstAttribute="trailing" secondItem="obL-XT-gM1" secondAttribute="trailing" id="vBh-J2-5BC"/>
