fix replay error bug

--- a/education_iOS/AgoraEducation/StoryBoards/Room/Base.lproj/Room.storyboard
+++ b/education_iOS/AgoraEducation/StoryBoards/Room/Base.lproj/Room.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="landscape" appearance="light"/>
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
@@ -70,18 +70,6 @@
                                 <rect key="frame" x="100" y="100" width="752" height="314"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDY-GA-tjB">
-                                <rect key="frame" x="822" y="110" width="30" height="30"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="IXt-2s-LrT"/>
-                                    <constraint firstAttribute="width" constant="30" id="dck-L9-tja"/>
-                                </constraints>
-                                <state key="normal" image="view-close"/>
-                                <connections>
-                                    <action selector="messageViewshowAndHide:" destination="TUm-sE-AH2" eventType="touchUpInside" id="aNf-Sw-V8T"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qP8-rT-5bW">
                                 <rect key="frame" x="630" y="100" width="222" height="314"/>
                                 <subviews>
@@ -117,6 +105,18 @@
                                     <constraint firstAttribute="bottom" secondItem="6jm-dZ-OEY" secondAttribute="bottom" id="xBb-sC-Sy6"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDY-GA-tjB">
+                                <rect key="frame" x="822" y="110" width="30" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="IXt-2s-LrT"/>
+                                    <constraint firstAttribute="width" constant="30" id="dck-L9-tja"/>
+                                </constraints>
+                                <state key="normal" image="view-close"/>
+                                <connections>
+                                    <action selector="messageViewshowAndHide:" destination="TUm-sE-AH2" eventType="touchUpInside" id="aNf-Sw-V8T"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EHE-um-Y9E" customClass="EEChatTextFiled">
                                 <rect key="frame" x="630" y="358" width="222" height="56"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -423,6 +423,12 @@
                                         <exclude reference="JvZ-47-Ihk"/>
                                     </mask>
                                 </variation>
+                                <variation key="heightClass=compact-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="Edg-Cu-2iD"/>
+                                        <include reference="JvZ-47-Ihk"/>
+                                    </mask>
+                                </variation>
                                 <variation key="heightClass=compact-widthClass=regular">
                                     <mask key="constraints">
                                         <include reference="Edg-Cu-2iD"/>
@@ -446,6 +452,11 @@
                                     <mask key="constraints">
                                         <exclude reference="YRr-UI-aBE"/>
                                         <exclude reference="aKy-d5-QBu"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="YRr-UI-aBE"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=compact-widthClass=regular">
@@ -501,6 +512,11 @@
                                     <mask key="constraints">
                                         <exclude reference="4N7-0U-kod"/>
                                         <exclude reference="rHX-s3-qp4"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=compact" hidden="YES">
+                                    <mask key="constraints">
+                                        <include reference="4N7-0U-kod"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=compact-widthClass=regular" hidden="YES">
@@ -593,6 +609,13 @@
                                 <exclude reference="8ow-09-4qF"/>
                                 <exclude reference="azC-M6-XKY"/>
                                 <exclude reference="y7B-58-WSv"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="WAJ-dQ-QzN"/>
+                                <include reference="aoL-6p-g6X"/>
+                                <include reference="8ow-09-4qF"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact-widthClass=regular">
