--- a/src/icons.scss
+++ b/src/icons.scss
@@ -27,23 +27,6 @@
   }
 }
 
-.btn-loading {
-  user-select: none;
-  pointer-events: none;
-  content: ' ';
-  animation: rotate 1.3s infinite linear;
-  -webkit-animation: rotate 1.3s infinite linear;
-  &::after {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    content: ' ';
-    background-image: url('./assets/icon-loading.png');
-  }
-}
-
 .network-bad {
   cursor: pointer;
   display: flex;
@@ -217,7 +200,9 @@
 }
 
 .icon-setting,
-.icon-exit {
+.icon-exit,
+.icon-upload,
+.icon-loading {
   display: flex;
   max-width: 28px;
   max-height: 28px;
@@ -233,6 +218,28 @@
   background-size: contain;
   content: ' ';
   background-image: url('./assets/icon-setting@2x.png');
+}
+
+.icon-upload::after {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: ' ';
+  background-image: url('./assets/icon-upload-log@2x.png');
+}
+
+.icon-loading::after {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: ' ';
+  animation: rotate 1.3s infinite linear;
+  -webkit-animation: rotate 1.3s infinite linear;
+  background-image: url('./assets/icon-loading.png');
 }
 
 .icon-exit::after {
