--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,8 @@ html, body, #root {
 .flex-row {
   display: flex;
   flex-direction: row;
+  width: 65px;
+  justify-content: space-between;
 }
 
 .draggable {
