--- a/education_web/src/components/toast.scss
+++ b/education_web/src/components/toast.scss
@@ -16,6 +16,9 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  z-index: 10000;
+  user-select: none;
+  pointer-events: none;
 }
 
 .custom-toast {
