--- a/education_web/src/components/whiteboard.scss
+++ b/education_web/src/components/whiteboard.scss
@@ -1,3 +1,12 @@
+.relative {
+  position: relative;
+  .icon-delete {
+    position: absolute;
+    right: 0px;
+    z-index: 99;
+  }
+}
+
 .whiteboard-canvas {
   display: flex;
   flex: 1;
@@ -99,6 +108,13 @@
           background-image: url('../assets/icon-ppt@2x.png');
         }
 
+        .title {
+          cursor: text;
+          > .MuiInputBase-input {
+            text-align: center;
+          }
+        }
+
         .doc-cover {
           background-image: url('../assets/icon-home@2x.png');
         }
@@ -172,6 +188,7 @@
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1);
     border-radius: 6px;
     border: 1px solid rgba(219,226,229,1);
+    z-index: 1;
     .zoom-icon {
       cursor: pointer;
       width: 34px;
@@ -242,7 +259,7 @@
       border:1px solid rgba(219,226,229,1);
       top: 183px;
       left: 63px;
-      z-index: 5;
+      z-index: 2;
       position: absolute;
       pointer-events: all;
       display: flex;
