--- a/education_web/src/index.scss
+++ b/education_web/src/index.scss
@@ -4,7 +4,22 @@ html, body, #root {
   overflow: hidden;
 }
 
+.screen-sharing {
+  video {
+    object-fit: contain !important;
+  }
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  width: 65px;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
 .draggable {
+  z-index: 10000;
   -webkit-app-region: drag;
   -webkit-user-select: none;
   .card-menu, .position-content {
@@ -15,6 +30,10 @@ html, body, #root {
 .nav-container {
   -webkit-app-region: drag;
   -webkit-user-select: none;
+}
+
+.nav-container.draggable {
+  z-index: 200000;
 }
 
 button {
