feat. add capture permission ask

--- a/education_web/src/components/native-shared-window.scss
+++ b/education_web/src/components/native-shared-window.scss
@@ -49,6 +49,7 @@
         font-size: 11px;
       }
       .cancelBtn {
+        cursor: pointer;
         background-repeat: no-repeat;
         width: 21px;
         height: 21px;
